mcdSalesforce/main/default/objects/Cast__c/Cast__c.object-meta.xml
<CustomObject>
    <label>Cast</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Cast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Castings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>