mcdSalesforce/main/default/objects/Cast__c/fields/Cast_ID__c.field-meta.xml
<CustomField>
    <fullName>Cast_ID__c</fullName>
    <inlineHelpText>ID for the cast unique within the film</inlineHelpText>
    <label>Cast ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>