mcdSalesforce/main/default/objects/Cast__c/fields/Credit_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_ID__c</fullName>
    <inlineHelpText>GUID tying back to Credit object if ever brought over.</inlineHelpText>
    <label>Credit ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>