mcdSalesforce/main/default/objects/Cast__c/fields/Talent__c.field-meta.xml
<CustomField>
    <fullName>Talent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent</label>
    <referenceTo>Talent__c</referenceTo>
    <relationshipLabel>Castings</relationshipLabel>
    <relationshipName>Castings</relationshipName>
    <type>Lookup</type>
</CustomField>